As a user I can login and log out [Delivers #179558197]
